[gd_scene load_steps=11 format=2]

[ext_resource path="res://Textures/frame.png" type="Texture" id=1]
[ext_resource path="res://Textures/timer.png" type="Texture" id=2]
[ext_resource path="res://Textures/lost.png" type="Texture" id=3]
[ext_resource path="res://Textures/found.png" type="Texture" id=4]
[ext_resource path="res://Scenes/MonsterCreator.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/TinderGameplay.gd" type="Script" id=6]
[ext_resource path="res://Scenes/GameOverPopup.tscn" type="PackedScene" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 61, 17, 10 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 18, 61, 17, 10 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 3, 56, 30, 2 )

[node name="Node" type="Control"]
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI_layer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="UI_layer"]
margin_right = 360.0
margin_bottom = 720.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MonsterLayer" type="CanvasLayer" parent="UI_layer"]

[node name="Monster" parent="UI_layer/MonsterLayer" instance=ExtResource( 5 )]
position = Vector2( -0.793701, -0.793701 )
scale = Vector2( 8, 8 )

[node name="LostButton" type="TextureButton" parent="UI_layer"]
margin_top = 610.0
margin_right = 170.0
margin_bottom = 710.0
texture_normal = SubResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FoundButton" type="TextureButton" parent="UI_layer"]
margin_left = 180.0
margin_top = 610.0
margin_right = 350.0
margin_bottom = 710.0
texture_normal = SubResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="TextureProgress" parent="UI_layer"]
margin_left = 30.0
margin_top = 560.0
margin_right = 60.0
margin_bottom = 562.0
rect_scale = Vector2( 10, 10 )
value = 90.0
texture_progress = SubResource( 3 )
stretch_margin_right = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lives" type="Label" parent="UI_layer"]
margin_left = 199.0
margin_top = 21.0
margin_right = 316.0
margin_bottom = 50.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameTimer" type="Timer" parent="UI_layer"]
autostart = true

[node name="Popup_layer" type="CanvasLayer" parent="."]
layer = 2

[node name="GameOverPopup" type="WindowDialog" parent="Popup_layer"]
margin_left = 43.0
margin_top = 85.0
margin_right = 319.0
margin_bottom = 417.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverUI" parent="Popup_layer/GameOverPopup" instance=ExtResource( 7 )]
margin_left = 19.9272
margin_top = 13.5221
margin_right = -28.0728
margin_bottom = -26.4779
[connection signal="pressed" from="UI_layer/LostButton" to="." method="_on_LostButton_pressed"]
[connection signal="pressed" from="UI_layer/FoundButton" to="." method="_on_FoundButton_pressed"]
